--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -11,7 +11,7 @@ avatar = "avatar.png"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://pinglewang.github.io/"
+baseurl = "/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
@@ -22,6 +22,7 @@ googleAnalytics = ""
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
+
 
 ############################
 ## Advanced options below ##
