--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -134,6 +134,12 @@ sharing = true
   # Citation style ("apa" or "mla")
   citation_style = "apa"
 
+  # Link the title of the publication to the publication
+  links_title = false
+  # Link the authors of the publication to the list of publication made by this author
+  links_authors = false
+
+
 # Configuration of project pages.
 [projects]
   # Views for associated content.
