--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,25 +8,21 @@
   url = "#about"
   weight = 10
 
-#[[main]]
-#  name = "Posts"
-#  url = "#posts"
-#  weight = 20
-
-#[[main]]
-#  name = "Projects"
-#  url = "#projects"
-#  weight = 30
+[[main]]
+  name = "JMP"
+  url = "#featured"
+  weight = 20
 
 [[main]]
   name = "Research"
   url = "#publications"
-  weight = 40
+  weight = 30
 
 #[[main]]
-#  name = "Courses"
-#  url = "courses/"
-#  weight = 50
+#  name = "Conference"
+#  url = "#conference"
+#  weight = 40
+
 
 #[[main]]
 #  name = "Contact"
