--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,6 +18,11 @@
   url = "#publications"
   weight = 30
 
+[[main]]
+  name = "References"
+  url = "#references"
+  weight = 40
+
 #[[main]]
 #  name = "Conference"
 #  url = "#conference"
@@ -32,6 +37,6 @@
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 [[main]]
-   name = "CV"
-   url = "files/cv.pdf"
-   weight = 70
+  name = "CV"
+  url = "files/cv.pdf"
+  weight = 70
